stacks/kafka-stack/k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-platform
  labels:
    app.kubernetes.io/part-of: kafka-platform
  annotations:
    argocd.argoproj.io/sync-wave: "0"
