stacks/kafka-stack/k8s/base/kafka-schema-registry.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-schema-registry
  namespace: kafka-platform
  labels:
    app: kafka-schema-registry
    app.kubernetes.io/part-of: kafka-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-schema-registry
  template:
    metadata:
      labels:
        app: kafka-schema-registry
    spec:
      containers:
        - name: kafka-schema-registry
          image: confluentinc/cp-schema-registry:8.1.0
          ports:
            - containerPort: 8081
              name: http
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-schema-registry
  namespace: kafka-platform
  labels:
    app: kafka-schema-registry
    app.kubernetes.io/part-of: kafka-platform
spec:
  type: ClusterIP
  selector:
    app: kafka-schema-registry
  ports:
    - name: http
      port: 8081
      targetPort: 8081
